# kreuzberg

./: .deepsource.toml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .golangci.yml  .oxlintrc.json  .pre-commit-config.yaml  .rumdl.toml  .textlintrc.json  .typos.toml  ANALYSIS_SUMMARY.txt  ATTRIBUTIONS.md  CHANGELOG.md  CLI_SMOKE_TEST_REPORT.md  CONTRIBUTING.md  Cargo.toml  GO_AUDIT_REPORT.md  IMPLEMENTATION_NOTES.md  MEMORY_ANALYSIS.md  MEMORY_HOTSPOTS.md  PHASE2_ERROR_FFI_PLAN.md  PHASE2_ERROR_FFI_TEST_REPORT.md  PHASE_3E_COMPLETION_REPORT.md  PHASE_3E_INDEX.md  QUICK_REFERENCE.txt  README.md  README_MEMORY_ANALYSIS.md  RELEASE_NOTES_3.9.0.md  SESSION3_IMPLEMENTATION.md  SESSION_1_CODE_CHANGES.md  SESSION_1_COMPLETION_REPORT.md  SESSION_1_IMPLEMENTATION_SUMMARY.md  SESSION_5_SUMMARY.md  TODO.md  TYPING_FIX_SUMMARY.md  TYPING_INVESTIGATION_REPORT.md  Taskfile.yaml  Taskfile.yml  ai-rulez.yaml  (+26 more)
.ai-rulez/: config.toml  config.yaml  ground-truth-generation.md
.cargo/: config.toml
.docker/: README.md
.github/: actionlint.yaml  dependabot.yaml
benchmarks/: README.md  benchmark_baseline.py  end_to_end_benchmark.py  final_benchmark.py  optimization_summary.md  statistical_benchmark.py  tesseract_output_benchmark.py  token_reduction_compression_benchmark.py
comparative-benchmarks/: pyproject.toml
consolidated-analysis/: consolidated.html  consolidated.json
crates/kreuzberg-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  kreuzberg-ffi-install.pc  kreuzberg.h
crates/kreuzberg-ffi/include/: kreuzberg.h
crates/kreuzberg-ffi/src/: config_builder.rs  error.rs  helpers.rs  lib.rs  memory.rs  result.rs  result_view.rs  serialize.rs  types.rs
crates/kreuzberg-ffi/src/plugins/: ocr_backend.rs
crates/kreuzberg-ffi/tests/: config_loading_tests.rs  plugin_registration_tests.rs
crates/kreuzberg-ffi/tests.disabled/: config_loading_tests.rs
crates/kreuzberg-ffi/tests/c/: test_error.c
crates/kreuzberg-node/: .npmignore  Cargo.toml  README.md  index.d.ts  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
crates/kreuzberg-node/examples/: async-patterns.ts
crates/kreuzberg-node/npm/darwin-arm64/: package.json
crates/kreuzberg-node/npm/darwin-x64/: package.json
crates/kreuzberg-node/npm/linux-arm-gnueabihf/: package.json
crates/kreuzberg-node/npm/linux-arm64-gnu/: package.json
crates/kreuzberg-node/npm/linux-x64-gnu/: package.json
crates/kreuzberg-node/npm/win32-arm64-msvc/: package.json
crates/kreuzberg-node/npm/win32-x64-msvc/: package.json
crates/kreuzberg-node/src/: lib.rs  result.rs  worker_pool_api.rs
crates/kreuzberg-node/src/config/: types.rs
crates/kreuzberg-node/src/plugins/: ocr_backend.rs
crates/kreuzberg-node/tests/binding/: async-postprocessor.spec.ts  cli.spec.ts  error-integration.spec.ts  error-types.spec.ts  guten-ocr.spec.ts  mime-utils.spec.ts  registry-functions.spec.ts  render.spec.ts  sync-async-coverage.spec.ts
crates/kreuzberg-node/tests/binding/helpers/: mock-binding.ts
crates/kreuzberg-node/tests/fixtures/: config.yaml
crates/kreuzberg-node/typescript/: cli.ts  errors.ts  index.ts  types.ts
crates/kreuzberg-node/typescript/core/: type-converters.ts
crates/kreuzberg-node/typescript/ocr/: guten-ocr.ts
crates/kreuzberg-php/: Cargo.toml  README.md
crates/kreuzberg-php/src/: async_extraction.rs  deferred.rs  extraction.rs  lib.rs  types.rs
crates/kreuzberg-wasm/: Cargo.toml  README.md  package.json
crates/kreuzberg-wasm/e2e/go/: go.mod
crates/kreuzberg-wasm/e2e/java/: pom.xml
crates/kreuzberg-wasm/scripts/: fix-type-exports.js
crates/kreuzberg-wasm/src/: extraction.rs  lib.rs
crates/kreuzberg-wasm/typescript/: index.ts  types.ts
crates/kreuzberg-wasm/typescript/adapters/: wasm-adapter.spec.ts
crates/kreuzberg-wasm/typescript/ocr/: registry.spec.ts
docker/: Dockerfile.cli  Dockerfile.core  Dockerfile.full  (+3 more)
e2e/rust/: Cargo.toml
e2e/rust/src/: lib.rs
e2e/rust/tests/: archive_test.rs  async_test.rs  batch_test.rs  cache_operations_test.rs  cache_ops_test.rs  chunking_test.rs  configuration_test.rs  contract_test.rs  detection_test.rs  document_extractor_management_test.rs  document_test.rs  email_test.rs  embed_extra_test.rs  embedding_backend_management_test.rs  embeddings_test.rs  error_test.rs  extraction_test.rs  font_config_e2e.rs  format_specific_test.rs  hash_test.rs  html_test.rs  html_tests.rs  image_operations_test.rs  image_ops_test.rs  image_test.rs  language_test.rs  markup_test.rs  mime_utilities_test.rs  ocr_backend_management_test.rs  office_test.rs  office_tests.rs  parity_test.rs  parsing_test.rs  pdf_test.rs  plugin_apis_test.rs  post_processor_management_test.rs  registry_operations_test.rs  registry_test.rs  render_test.rs  rendering_test.rs  (+16 more)
e2e/rust/tests/fixtures/: contract_test.rs  embed_test.rs  ocr_test.rs  pdf_test.rs
v3/: README.md  (+2 more)
(+3217 files in other folders)
