[package]
name = "kreuzberg-ffi"
version = "4.8.5"
edition = "2021"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
repository = "https://github.com/kreuzberg-dev/kreuzberg"

[package.metadata.cargo-machete]
ignored = [
    "serde_json",
    "tokio",
    "serde-wasm-bindgen",
    "pyo3-async-runtimes",
    "serde_magnus",
    "wiremock",
]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
kreuzberg = { path = "../kreuzberg", features = ["full", "pdf", "ocr", "paddle-ocr", "layout-detection", "embeddings", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "tokio-runtime", "api", "mcp", "liter-llm"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.28"
