[package]
name = "kreuzberg-node"
version = "4.8.5"
edition = "2024"
license = "Elastic-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
kreuzberg = { path = "../kreuzberg", features = ["full", "pdf", "ocr", "paddle-ocr", "layout-detection", "embeddings", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "tokio-runtime", "api", "mcp", "liter-llm"] }
napi = { version = "3", features = ["async"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
