[package]
name = "kreuzberg-wasm"
version = "4.8.5"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
repository = "https://github.com/kreuzberg-dev/kreuzberg"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
ignored = ["serde-wasm-bindgen", "wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[dependencies]
kreuzberg = { path = "../kreuzberg", features = ["html"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
