[package]
name = "e2e-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
kreuzberg = { path = "../../crates/kreuzberg", features = ["full-bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
